enctype="multipart/form-data"

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-     <form enctype="application/x-www-form-urlencoded" method="post" action="/procesar">
+     <form enctype="multipart/form-data" method="post" action="/procesar">
          <b>Nombres:</b> <input type="text" name="firstName" maxlength="50"></br>
          <b>Apellidos:</b> <input type="text" name="lastName" maxlength="50"></br>
          <b>Correo:</b> <input type="text" name="email" maxlength="50"></br>
